--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 
 /*Css*/
 
+
+/*Important Export Coding*/
+
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Architects+Daughter&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Rock+Salt&display=swap');
@@ -12,8 +15,9 @@
   padding:0;
 }
 
-/*Important Export Coding*/
 
+
+/*Webkit ---- Comment Box*/
 
 ::-webkit-scrollbar {
 width: 15px;
@@ -248,7 +252,3 @@ font-family: 'B612', sans-serif;
         transform: translateY(0px);
     }
 }
-
-
-
-
